# taskit

./: Cargo.toml  README  README.md  TODOS  taskit.toml
src/: common.rs  input.rs  main.rs  output.rs  tui.rs  util.rs
src/common/: error.rs  invariants.rs
src/tui/: framework.rs  show.rs  tagedit.rs
