[package]
name = "taskit"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
inquire = { version = "0.9.1", features = ["date", "editor"] }
itertools = "0.14.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
