[package]
name = "taskit-tracker"
version = "0.1.0"
edition = "2024"
description = "A TUI to track time spent on activities"
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/aprzn123/taskit#taskit"
homepage = "https://github.com/aprzn123/taskit#taskit"
repository = "https://github.com/aprzn123/taskit"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
inquire = { version = "0.9.1", features = ["date", "editor"] }
itertools = "0.14.0"
ratatui = "0.29.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = "1.15.1"
toml = "1.1.2"
